@@ -11,6 +11,7 @@ Akeeba Panopticon 1.0.5
 + Groups act as tags for site filtering [gh-333]
 # [LOW] Test email message showed %s instead of the Panopticon URL
 # [LOW] Can't create a group without permissions [gh-335]
+# [LOW] Work around possible deadlocks trying to save site or extension information
 
 Akeeba Panopticon 1.0.4
 ================================================================================
